# Robotics

./: CMakeLists.txt  README.md
include/: max_robotics.h
src/: max_robotics.cpp  test_lib.cpp
src/algorithms/: find_clusters.cpp
src/exercises/: find_rectangles.cpp
